--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   },
   "dependencies": {
     "expo": "~42.0.1",
+    "expo-camera": "~11.2.1",
+    "expo-media-library": "~12.1.2",
+    "expo-screen-orientation": "~3.2.1",
     "expo-status-bar": "~1.0.4",
+    "firebase": "8.2.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
