--- a/app.json
+++ b/app.json
@@ -16,13 +16,17 @@
         "assetBundlePatterns": ["**/*"],
         "ios": {
             "supportsTablet": true,
-            "requireFullScreen": true
+            "requireFullScreen": true,
+            "bundleIdentifier": "com.sithssolarcar.failemetry2",
+            "buildNumber": "1.0.0"
         },
         "android": {
             "adaptiveIcon": {
                 "foregroundImage": "./assets/adaptive-icon.png",
                 "backgroundColor": "#FFFFFF"
-            }
+            },
+            "package": "com.sithssolarcar.failemetry2",
+            "versionCode": 1
         },
         "web": {
             "favicon": "./assets/favicon.png"
