--- a/app.json
+++ b/app.json
@@ -4,9 +4,9 @@
         "slug": "SolarCarFailemetry",
         "version": "1.0.0",
         "orientation": "landscape",
-        "icon": "./assets/icon.png",
+        "icon": "./assets/solar-1.png",
         "splash": {
-            "image": "./assets/splash.png",
+            "image": "./assets/solar-1.png",
             "resizeMode": "contain",
             "backgroundColor": "#ffffff"
         },
@@ -21,10 +21,6 @@
             "buildNumber": "1.0.0"
         },
         "android": {
-            "adaptiveIcon": {
-                "foregroundImage": "./assets/adaptive-icon.png",
-                "backgroundColor": "#FFFFFF"
-            },
             "package": "com.sithssolarcar.failemetry2",
             "versionCode": 1
         },
